--- a/portfolio_3/Dockerfile
+++ b/portfolio_3/Dockerfile
@@ -1,1 +1,4 @@
-
+FROM amazoncorretto:17-alpine-jdk
+MAINTAINER jrDeveloper
+COPY target/portfolio_3-0.0.1-SNAPSHOT.jar portfolio_3-0.0.1-SNAPSHOT.jar
+ENTRYPOINT ["java","-jar","/portfolio_3-0.0.1-SNAPSHOT.jar"]
